PDFPlugin.mm:2303:139: error: type 'SEL _Nullable' cannot be narrowed to 'bool' in initializer list [-Wc++11-narrowing] <https://webkit.org/b/217791> <rdar://problem/70349804>

Reviewed by Tim Horton.

* WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::handleContextMenuEvent):
- Use `!!` to convert result to `bool`.


Canonical link: https://commits.webkit.org/230524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268562 268f45cc-cd09-0410-ab3c-d52691b4dbfc