Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.mm
@@ -2300,7 +2300,7 @@ bool PDFPlugin::handleContextMenuEvent(const WebMouseEvent& event)
         auto item = [nsMenu itemAtIndex:i];
         if ([item submenu])
             continue;
-        PDFContextMenuItem menuItem { String([item title]), !![item isEnabled], !![item isSeparatorItem], static_cast<int>([item state]), [item action], i };
+        PDFContextMenuItem menuItem { String([item title]), !![item isEnabled], !![item isSeparatorItem], static_cast<int>([item state]), !![item action], i };
         items.append(WTFMove(menuItem));
     }
     PDFContextMenu contextMenu { point, WTFMove(items) };
